tests/paczka1/fuzzy1/85279776.err
Error in line 7: ILzPwYZ9GFL S730 67,3
Error in line 13: A551 S607 93,22
Error in line 11: ILzPwYZ9GFL S607 66,3
Error in line 12: A551 A920 8,8
Error in line 19: qjYbsoL9OE S607 72,6
Error in line 18: A551 A551 85,2
Error in line 21: qjYbsoL9OE S730 32,7
Error in line 25: G9Q74FI8E A551 18,4
Error in line 30: J2y A551 73,5
